// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Link checkGrammar 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkGrammar 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkGrammar 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkGrammar 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkHighlight 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkHighlight 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkHighlight 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkHighlight 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkSpaces 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkSpaces 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkSpaces 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkSpaces 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link className 1`] = `
<a
  className="uu5-bricks-link my-classname"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 1`] = `
<a
  className="color-schema-default uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 2`] = `
<a
  className="color-schema-red uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 3`] = `
<a
  className="color-schema-red uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 4`] = `
<a
  className="color-schema-red-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 5`] = `
<a
  className="color-schema-red-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 6`] = `
<a
  className="color-schema-green uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 7`] = `
<a
  className="color-schema-green uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 8`] = `
<a
  className="color-schema-green-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 9`] = `
<a
  className="color-schema-green-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 10`] = `
<a
  className="color-schema-yellow uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 11`] = `
<a
  className="color-schema-yellow uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 12`] = `
<a
  className="color-schema-yellow-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 13`] = `
<a
  className="color-schema-yellow-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 14`] = `
<a
  className="color-schema-purple uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 15`] = `
<a
  className="color-schema-purple uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 16`] = `
<a
  className="color-schema-purple-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 17`] = `
<a
  className="color-schema-purple-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 18`] = `
<a
  className="color-schema-brown uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 19`] = `
<a
  className="color-schema-brown uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 20`] = `
<a
  className="color-schema-brown-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 21`] = `
<a
  className="color-schema-brown-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 22`] = `
<a
  className="color-schema-orange uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 23`] = `
<a
  className="color-schema-orange uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 24`] = `
<a
  className="color-schema-orange-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 25`] = `
<a
  className="color-schema-orange-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 26`] = `
<a
  className="color-schema-cyan uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 27`] = `
<a
  className="color-schema-cyan uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 28`] = `
<a
  className="color-schema-cyan-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 29`] = `
<a
  className="color-schema-cyan-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 30`] = `
<a
  className="color-schema-grey uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 31`] = `
<a
  className="color-schema-grey uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 32`] = `
<a
  className="color-schema-grey-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 33`] = `
<a
  className="color-schema-grey-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 34`] = `
<a
  className="color-schema-pink uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 35`] = `
<a
  className="color-schema-pink uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 36`] = `
<a
  className="color-schema-pink-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 37`] = `
<a
  className="color-schema-pink-rich uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema 38`] = `
<a
  className="color-schema-pink uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link content 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  12345
</a>
`;

exports[`UU5.Bricks.Link content 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</a>
`;

exports[`UU5.Bricks.Link content 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</a>
`;

exports[`UU5.Bricks.Link content 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  12345
</a>
`;

exports[`UU5.Bricks.Link controlled 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link controlled 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link controlled 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link controlled 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link default props 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link disabled 1`] = `
<a
  className="uu5-bricks-link uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link disabled 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link disabled 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link disabled 4`] = `
<a
  className="uu5-bricks-link uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link docKit examples UU5.Bricks.Link should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Link
    className={null}
    colorSchema={null}
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="http://www.unicorn.com/"
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_blank"
    tooltip={null}
  >
    www.unicorn.com
  </Link>
</div>
`;

exports[`UU5.Bricks.Link download 1`] = `
<a
  className="uu5-bricks-link"
  download={true}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link download 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link download 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link download 4`] = `
<a
  className="uu5-bricks-link"
  download={true}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link dynamic 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link dynamic 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link dynamic 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link dynamic 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link hidden 1`] = `
<a
  className="uu5-bricks-link uu5-common-hidden"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link hidden 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link hidden 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link hidden 4`] = `
<a
  className="uu5-bricks-link uu5-common-hidden"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link href 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="https://unicorn.com/"
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  https://unicorn.com/
</a>
`;

exports[`UU5.Bricks.Link href 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="www.unicorn.com"
  id="uuID"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  target="_self"
  title={null}
>
  www.unicorn.com
</a>
`;

exports[`UU5.Bricks.Link href 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="www.unicorn.com"
  id="uuID"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  target="_self"
  title={null}
>
  www.unicorn.com
</a>
`;

exports[`UU5.Bricks.Link href 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="http://example.com/test_url_for_tools-ifc.test.js?param=value#about"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  target="_self"
  title={null}
>
  #about
</a>
`;

exports[`UU5.Bricks.Link href 5`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="http://example.com/test_url_for_tools-ifc.test.js?param=value#about"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  target="_self"
  title={null}
>
  #about
</a>
`;

exports[`UU5.Bricks.Link href 6`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="mailto:me@example.com"
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  mailto:me@example.com
</a>
`;

exports[`UU5.Bricks.Link href 7`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="mailto:me@example.com"
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  mailto:me@example.com
</a>
`;

exports[`UU5.Bricks.Link href 8`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="ftp://example.com/folder"
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  ftp://example.com/folder
</a>
`;

exports[`UU5.Bricks.Link href 9`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="ftp://example.com/folder"
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  ftp://example.com/folder
</a>
`;

exports[`UU5.Bricks.Link href 10`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="mailto:me@example.com"
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  mailto:me@example.com
</a>
`;

exports[`UU5.Bricks.Link id 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="myId"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link ignoreHTML 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link ignoreHTML 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link ignoreHTML 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link ignoreHTML 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link mainAttrs 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link name 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  name="myName"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 5`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 6`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 7`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 8`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 9`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 10`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 11`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 12`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 13`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 14`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 15`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 16`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 17`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 18`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 19`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel 20`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link noIndex 1`] = `
<a
  className="uu5-bricks-link uu5-noindex"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link noIndex 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link noIndex 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link noIndex 4`] = `
<a
  className="uu5-bricks-link uu5-noindex"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link offset 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link offset 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link offset 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link offset 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link props.Function UU5.Bricks.Link -  onClick() should be called 1`] = `
<Link
  className={null}
  colorSchema={null}
  content="www.unicorn.com"
  controlled={true}
  disabled={false}
  download={false}
  dynamic={false}
  hidden={false}
  href="http://www.unicorn.com/"
  id={null}
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={[Function]}
  onCtrlClick={[Function]}
  onWheelClick={[Function]}
  pureRender={false}
  ref_={null}
  selected={false}
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Link props.Function UU5.Bricks.Link -  onCtrlClick() should be called 1`] = `
<Link
  className={null}
  colorSchema={null}
  content="www.unicorn.com"
  controlled={true}
  disabled={false}
  download={false}
  dynamic={false}
  hidden={false}
  href="http://www.unicorn.com/"
  id={null}
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={[Function]}
  onCtrlClick={[Function]}
  onWheelClick={[Function]}
  pureRender={false}
  ref_={null}
  selected={false}
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Link props.Function UU5.Bricks.Link -  onWheelClick() should be called 1`] = `
<Link
  className={null}
  colorSchema={null}
  content="www.unicorn.com"
  controlled={true}
  disabled={false}
  download={false}
  dynamic={false}
  hidden={false}
  href="http://www.unicorn.com/"
  id={null}
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={[Function]}
  onCtrlClick={[Function]}
  onWheelClick={[Function]}
  pureRender={false}
  ref_={null}
  selected={false}
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Link pureRender 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link pureRender 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link pureRender 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link pureRender 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link selected 1`] = `
<a
  className="uu5-bricks-link uu5-common-selected"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link selected 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link selected 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link selected 4`] = `
<a
  className="uu5-bricks-link uu5-common-selected"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link smoothScroll 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link smoothScroll 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link smoothScroll 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link smoothScroll 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link style 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link style 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link style 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link style 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link target 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_blank"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link target 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_parent"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link target 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_parent"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link target 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_top"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link target 5`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_top"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link target 6`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link target 7`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link target 8`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_top"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link textCorrector 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link textCorrector 2`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link textCorrector 3`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link textCorrector 4`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link tooltip 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href={null}
  id="uuID"
  style={Object {}}
  target="_self"
  title="My Tooltip"
>
  noText
</a>
`;
